# fiberslice

./: .gitignore  Cargo.toml  README.md  Testparts - Ring.stl  config.toml  settings.toml
assets/: build_plate_img.xcf
dev-docs/: 25-dez-2024.md  docs_25_dez_2024.odt
macros/: Cargo.toml
macros/src/: lib.rs
shared/: Cargo.toml
shared/src/: lib.rs  loader.rs  process.rs
slicer/: Cargo.toml
slicer/src/: calculation.rs  command_pass.rs  dispatcher.rs  fiber.rs  gcode.rs  lib.rs  mask.rs  move.rs  optimizer.rs  settings.rs  slice_pass.rs  slicing.rs  tower.rs  utils.rs
slicer/src/gcode/: mod.rs  navigator.rs
slicer/src/plotter/: infill.rs  lightning_infill.rs  mod.rs  perimeter.rs  polygon_operations.rs  support.rs  walls.rs
src/: config.rs  input.rs  main.rs  prelude.rs  render.rs  slicer.rs  ui.rs
src/api/: math.rs  mod.rs
src/assets/: cone.stl  cube.stl  cylinder.stl
src/geometry/: box.rs  mesh.rs  mod.rs
src/input/: hitbox.rs  interact.rs  queue.rs  ray.rs
src/prelude/: shared.rs  tracker.rs
src/render/: descriptor.rs  group.rs  model.rs  pipeline.rs  texture.rs  texture_shader.wgsl  vertex.rs
src/ui/: boundary.rs  custom_toasts.rs  icon.rs  screen.rs  settings.rs  visual.rs
src/ui/api/: mod.rs
src/ui/components/: menubar.rs  mod.rs  modebar.rs  settingbar.rs  sidebar.rs  taskbar.rs  toolbar.rs  topbar.rs
src/ui/components/addons/: cad_tools.rs  gizmo.rs  mod.rs
src/ui/tools/: debug.rs  explorer.rs  gcode.rs  mod.rs  visibility.rs
src/ui/widgets/: list.rs  mod.rs  reader.rs  switch.rs  tabbed.rs
src/viewer/: camera.rs  mod.rs  select.rs  volume.rs
src/viewer/camera/: orbit_camera.rs
src/viewer/server/: env.rs  mask.rs  mod.rs  model.rs  sliced.rs  sliced_shader.wgsl  toolpath.rs
src/viewer/server/cad/: mask.rs  mod.rs  model.rs  object.rs
src/viewer/server/cad_model/: mask.rs  mod.rs  model.rs
src/viewer/server/env/: mod.rs
src/viewer/toolpath/: mesh.rs  mod.rs  tree.rs  vertex.rs
src/viewer/trace/: mesh.rs  mod.rs  tree.rs  vertex.rs
