#![allow(dead_code)]
[package]
name = "fiberslice-5d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui_grid = { git = "https://github.com/GodGotzi/egui_grid" }
egui_extras = { version = "0.30", features = ["all_loaders"] }
egui = "0.30"
egui_wgpu_backend = { git = "https://github.com/GodGotzi/egui_wgpu_backend.git" }
egui_winit_platform = { git = "https://github.com/GodGotzi/egui_winit_platform.git" }

strum = "0.26"
strum_macros = "0.26"
image = { version = "0.25.5", features = ["jpeg", "png"] }

thiserror = "2.0.9"
serde = "1.0.217"
serde_yaml = "0.9.25"
stl_io = "0.8.3"
uni-path = "1.51.1"
phf = { version = "0.11", features = ["macros"] }

winit = "0.30.7"

tokio = { version = "1.42.0", features = ["macros", "full"] }
serde_json = "1.0.134"
parking_lot = "0.12.3"
egui_xml = "0.1.4"
puffin = "0.19.0"
puffin_http = "0.16.0"

wgpu = "23.0.1"

glam = "0.29.2"
bytemuck = "1.21.0"
simple-logging = "2.0.2"
log = "0.4.21"
egui-toast = { git = "https://github.com/GodGotzi/egui-toast.git" }
# puffin_egui = { git = "https://github.com/EmbarkStudios/puffin" }
futures-channel = "0.3.31"

egui_code_editor = "0.2.11"
env_logger = "0.11.6"
pollster = "0.4.0"
rayon = "1.10.0"
ordered-float = "4.6.0"
rand = "0.8.5"
atomic_float = "1.1.0"

slicer = { path = "slicer" }
shared = { path = "shared" }
native-dialog = { version = "0.7.0", features = [
    "windows_dpi_awareness",
    "windows_visual_styles",
] }
toml = "0.8.19"
once_cell = "1.20.2"
