[package]
name = "slicer"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1.10.0"
ordered-float = "4.6"
rand = "0.8.5"

geo = { version = "0.29.3", features = ["use-serde"] }
geo-clipper = "^0.8"
geo-svg = "0.7.0"

itertools = "0.14.0"
deser-hjson = "2.2.4"
serde = "1.0.217"

strum = "0.26"
strum_macros = "0.26"
log = "0.4.21"

nom = "7.1.0"

glam = "0.29.0"

once_cell = "1.10"
serde_json = "1.0.135"
lazy_static = "1.5.0"
shared = { path = "../shared" }
